# trada

./: .gitignore  README.md  pyproject.toml  requirements.md  rxconfig.py
.github/workflows/: build-linux-bundle.yml
docs/: architecture.md  offline_linux_bundle.md  usage.md
packaging/: linux_launcher.py
scripts/: build_linux_bundle.sh
storage/: tradeoff_state.json
tradeoff_app/: __init__.py  tradeoff_app.py
tradeoff_app/components/: common.py
tradeoff_app/data/: sample_data.py
tradeoff_app/domain/: models.py
tradeoff_app/services/: calculations.py  storage.py
